--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     position: fixed;
-    /* Changed to fixed to overlay content */
+    /* Om du vill att loadern ska vara över allt annat innehåll */
     top: 0;
     left: 0;
     right: 0;
@@ -12,14 +12,47 @@
     z-index: 9999;
     /* High z-index to make sure it's on top */
     background: transparent;
-    /* Optional: semi-transparent background */
+    /* Loader background */
 }
 
 .block {
-    /* ... rest of the block styles ... */
+    --sz: 8vmin;
+    --tX: 0;
+    --animation: 700ms cubic-bezier(0.3, 0.5, 0.4, 0.9) infinite alternate-reverse;
+    --hm: 4.5vmin;
+    height: var(--sz);
+    width: var(--sz);
+    border-radius: 50%;
+    transform: translateX(var(--tX));
+    mix-blend-mode: lighten;
 }
 
-/* ... rest of the provided CSS ... */
+.orange {
+    --bg: linear-gradient(-50deg, #fbab7e 0%, #f7ce68 100%);
+    margin-right: var(--hm);
+    background-image: var(--bg);
+    animation: attract-orange var(--animation);
+}
+
+.blue {
+    --bg: linear-gradient(50deg, #00bfd5 0%, #c5f5ff 100%);
+    margin-left: var(--hm);
+    background-image: var(--bg);
+    animation: attract-blue var(--animation);
+}
+
+@keyframes attract-orange {
+    to {
+        transform: translateX(calc(var(--sz) + calc(var(--hm) / 4)));
+    }
+}
+
+@keyframes attract-blue {
+    to {
+        transform: translateX(calc(var(--sz) * -1 - calc(var(--hm) / 4)));
+    }
+}
+
 
 
 .nav {
