--- a/style.css
+++ b/style.css
@@ -58,6 +58,23 @@
     display: none;
 }
 
+/* CSS för att mörkna och sudda ut bakgrunden */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Mörkare bakgrund */
+    backdrop-filter: blur(5px);
+    /* Suddighetseffekt */
+    z-index: 9998;
+    /* Se till att det är under loadern */
+    display: none;
+    /* Dolt som standard */
+}
+
 
 .nav {
     color: rgb(0, 0, 0);
