--- a/style.css
+++ b/style.css
@@ -274,6 +274,13 @@ html {
     /* Bibehåller bildens proportioner */
 }
 
+.foodimage {
+    width: 200px;
+    /* eller en procentandel, beroende på dina behov */
+    height: auto;
+    /* Bibehåller bildens proportioner */
+}
+
 
 .search-container {
     display: flex;
