--- a/style.css
+++ b/style.css
@@ -858,6 +858,7 @@ input:not(:checked)+.slider.large {
         /* Justerar bredden så två element får plats, minus marginal */
         max-width: calc(50% - 20px);
         /* Samma här */
+        padding: 10px; /* Mindre padding inuti varje resultat */
         margin: 5px;
         /* Behåller en liten marginal runt varje element */
     }
