--- a/style.css
+++ b/style.css
@@ -372,11 +372,12 @@ html {
     border: none;
     transform: scale(0.95);
     transform-origin: top center;
+    padding: 5;
 }
 
 .matratt-title {
     background-color: rgba(255, 255, 255, 0.8);
-    padding: 10px;
+    padding: 5px;
     margin: 5px 0;
     border-radius: 10px;
     font-size: 8;
