--- a/style.css
+++ b/style.css
@@ -345,7 +345,8 @@ html {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: flex-start; /* Justerar items till toppen av container */
+    align-items: center;
+    /* Justerar items till toppen av container */
     margin-top: 2%;
     padding-bottom: 20px;
     overflow: auto;
@@ -356,13 +357,14 @@ html {
 .matratt {
     flex: 0 0 calc(20% - 10px);
     max-width: calc(20% - 10px);
-    margin: 5px;
+    margin: auto;
     padding: 10px;
     border-radius: 10px;
     text-align: center;
     box-sizing: border-box;
     align-self: flex-start;
     position: relative;
+    width: 100%;
 }
 
 .matratt iframe {
