--- a/style.css
+++ b/style.css
@@ -805,9 +805,11 @@ input:not(:checked)+.slider.large {
     }
 
     .matratt iframe {
-        /* Justera iframe-storleken för desktop om det behövs */
-        height: auto;
-        /* Detta kan justeras beroende på innehållet */
+        width: 100%;
+        /* Säkerställer att iframe tar upp hela bredden av sin container */
+        height: 300px;
+        /* Exempel på fast höjd, justera enligt behov */
+        /* Lägg till andra stylingegenskaper här efter behov */
     }
 }
 
