--- a/style.css
+++ b/style.css
@@ -233,8 +233,10 @@
 
 body,
 html {
-    height: 100%;
+    width: 100%;
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
     font-family: 'Exo 2', cursive;
     padding-bottom: 100px;
     /* Eller höjden på din footer */
@@ -793,10 +795,14 @@ input:not(:checked)+.slider.large {
 
 /* Media query för desktop */
 @media (min-width: 481px) {
+
     .matratt {
-        flex: 0 0 calc(25% - 10px);
-        max-width: calc(25% - 10px);
+        flex: 0 0 calc(25% - 20px);
+        max-width: calc(25% - 20px);
         /* Lägg till eventuella ytterligare stilar som behövs för desktop här */
+        margin: 10px;
+        /* Halva marginalvärdet, eftersom det tillämpas på båda sidor */
+    
     }
 
     .matratt-title {
@@ -889,6 +895,8 @@ input:not(:checked)+.slider.large {
 
 
 }
+
+
 
 
 
