--- a/style.css
+++ b/style.css
@@ -370,14 +370,21 @@ html {
 }
 
 .matratt iframe {
+    background: white;
+    max-width: 100%;
+    /* Denna regel säkerställer att iframe tar upp till 100% av sin förälders bredd */
     width: 100%;
-    height: 600px;
-    overflow-y: auto;
+    /* Denna regel gör så att iframe faktiskt tar upp 100% av tillgänglig bredd */
+    border-radius: 3px;
+    border: 1px solid rgb(219, 219, 219);
+    box-shadow: none;
     display: block;
-    border: none;
-    transform: scale(0.95);
-    transform-origin: top center;
-    padding: 5;
+    margin: 0px 0px 12px;
+    padding: 0px;
+    height: auto;
+    /* Gör så att höjden anpassas automatiskt */
+    min-height: 400px;
+    /* Minimum höjd för att säkerställa konsistens */
 }
 
 .matratt-title {
@@ -802,7 +809,7 @@ input:not(:checked)+.slider.large {
         /* Lägg till eventuella ytterligare stilar som behövs för desktop här */
         margin: 10px;
         /* Halva marginalvärdet, eftersom det tillämpas på båda sidor */
-    
+
     }
 
     .matratt-title {
@@ -820,6 +827,13 @@ input:not(:checked)+.slider.large {
 }
 
 @media (max-width: 480px) {
+    .matratt iframe {
+        min-width: 150px;
+        /* Sätt en minimum bredd för iframes på små skärmar */
+        height: auto;
+        /* Tillåt att höjden justeras automatiskt */
+    }
+
     .logo-link img {
         height: 80px;
         /* Justera storleken på logotypen om det behövs */
