--- a/style.css
+++ b/style.css
@@ -830,9 +830,10 @@ input:not(:checked)+.slider.large {
     .matratt iframe {
         width: 100%;
         /* Säkerställer att iframe tar upp hela bredden av sin container */
-        height: 350px;
+        height: 500px;
         /* Exempel på fast höjd, justera enligt behov */
         /* Lägg till andra stylingegenskaper här efter behov */
+        min-height: 500px;
     }
 }
 
