--- a/style.css
+++ b/style.css
@@ -966,6 +966,7 @@ input:not(:checked)+.slider.large {
     flex-direction: column;
     height: 80vh;
     /* Justera detta värde efter behov */
+    margin-top: 50px; /* Lägg till önskat tomt utrymme */
 }
 
 .image-link {
