--- a/style2.css
+++ b/style2.css
@@ -35,7 +35,7 @@
     width: 100%;
     padding: 10px 0;
     background-color: rgb(255, 247, 179);
-    color: white;
+    color: black;
     text-align: center;
     cursor: pointer;
     border: none;
