försöker få visa fler knappen att fungera som den ska

--- a/style2.css
+++ b/style2.css
@@ -34,6 +34,11 @@ body {
     margin-bottom: 20px;
 }
 
+.hidden {
+    display: none;
+}
+
+
 /* Visa fler-knappens stil */
 .show-more-btn {
     grid-column: 1 / -1;
