--- a/style2.css
+++ b/style2.css
@@ -23,20 +23,16 @@ body {
 
 /* Bildinställningar inom bildknappen */
 .image-button img {
-    width: 120px;
-    /* Ange en specifik bredd för bilderna */
-    height: 120px;
-    /* Ange en höjd som matchar bredden för att behålla bildförhållandet */
+    width: 100%;
+    height: auto;
     border-radius: 5px;
-    object-fit: cover;
-    /* Denna egenskap gör att bilden täcker hela elementet utan att förvrängas */
 }
 
 /* Stilar för behållaren av bildknappar */
 .filter-container {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    gap: 1px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0.5px;
     margin-bottom: 20px;
 }
 
@@ -84,7 +80,7 @@ body {
 
 /* Effekt när man hovrar över bildknappar */
 .image-button:hover img {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 
