--- a/style2.css
+++ b/style2.css
@@ -28,7 +28,7 @@ body {
     /* Startar osynlig */
     width: 100%;
     height: 100%;
-    box-shadow: 0 0 8px 8px rgba(255, 165, 0, 0);
+    box-shadow: 0 0 8px 8px rgb(255, 255, 255);
     /* Osynlig tills aktiverad */
 }
 
