--- a/style.css
+++ b/style.css
@@ -588,6 +588,10 @@ html {
     /* Bakgrundsfärg för slider när den är av */
     -webkit-transition: .4s;
     transition: .4s;
+    -webkit-tap-highlight-color: transparent;
+    /* för Safari och Chrome på iOS */
+    tap-highlight-color: transparent;
+    /* standard CSS egenskap, men stöds inte av alla webbläsare än */
 }
 
 .switch .slider:before {
