--- a/style2.css
+++ b/style2.css
@@ -1,14 +1,3 @@
-/* Variabler för den nya knappen */
-:root {
-    --backgroundColor: rgba(246, 241, 209);
-    /* Om du redan använder :root, lägg till dessa i din befintliga :root-deklaration */
-    --colorShadeA: rgb(106, 163, 137);
-    --colorShadeB: rgb(121, 186, 156);
-    --colorShadeC: rgb(150, 232, 195);
-    --colorShadeD: rgb(187, 232, 211);
-    --colorShadeE: rgb(205, 255, 232);
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
 
 body {
@@ -206,10 +195,29 @@ body {
     /* Bevarar bildens proportioner */
 }
 
-button.big-button {
-    /* Kopiera alla stilar från den nya knappen här */
-    /* Exempel */
-    padding: 1em 2em;
-    border: 2px solid var(--colorShadeA);
-    /* ... resten av stilar ... */
+#searchBtn {
+    font-family: 'Exo 2', sans-serif;
+    font-size: 1.5em;
+    width: 80%;
+    max-width: 400px;
+    padding: 15px 30px;
+    margin: 0 auto 30px;
+    display: block;
+    background-color: rgb(244, 211, 94);
+    color: rgb(250, 240, 202);
+    border: none;
+    border-radius: 50px;
+    box-shadow: 0 5px 15px rgba(13, 59, 102);
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#searchBtn:hover {
+    background-color: #003d82;
+    box-shadow: 0 8px 25px rgba(13, 59, 102);
+}
+
+#searchBtn:active {
+    background-color: #003366;
+    box-shadow: 0 2px 5px rgba(244, 211, 94);
 }
