--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ html {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/tallriken/images/bluebackground.png');
+    background-color: rgb(250, 240, 202);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
