--- a/style2.css
+++ b/style2.css
@@ -109,7 +109,7 @@ body {
     width: 100%;
     padding: 10px 0;
     background-color: rgb(94, 149, 179);
-    color: black;
+    color: white;
     text-align: center;
     cursor: pointer;
     border: none;
